azure/K8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: backend-sa
      containers:
        - name: backend
          image: k8spractice.azurecr.io/blue_backend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secrets-store
              mountPath: /mnt/secrets
              readOnly: true
      volumes:
        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: postgres-keyvault
                       

---

apiVersion: v1
kind: Service
metadata:
  name: backend  # ✅ Frontend will connect to this
  namespace: blue
spec:
  selector:
    app: backend  # Must match deployment label
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
