azure/K8s/frontend-blue-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
spec:
  selector:
    app: frontend
    color: blue   # switch to green when ready
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
