azure/K8s/frontend-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-blue
spec:
  replicas: 4
  selector:
    matchLabels:
      app: frontend
      color: blue
  template:
    metadata:
      labels:
        app: frontend
        color: blue
    spec:
      containers:
      - name: frontend-blue
        image: k8spractice.azurecr.io/blue_frontend:latest

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-blue
spec:
  selector:
    app: frontend
    color: blue   # switch to green when ready
  ports:
    - port: 80
      targetPort: 80
