azure/K8s/frontend-green.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
      color: green
  template:
    metadata:
      labels:
        app: frontend
        color: green
    spec:
      containers:
      - name: frontend-green
        image: k8spractice.azurecr.io/green_frontend:latest

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-green
spec:
  selector:
    app: frontend
    color: green
  ports:
    - port: 80
      targetPort: 80
